bundled_metadata/force-app/main/default/objects/Task_Scheduler_Rule__mdt/Task_Scheduler_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Task Scheduler Rule</label>
    <pluralLabel>Task Scheduler Rules</pluralLabel>
</CustomObject>