bundled_metadata/force-app/main/default/objects/Task_Scheduler_Rule__mdt/fields/L1_Channel__c.field-meta.xml
<CustomField>
    <fullName>L1_Channel__c</fullName>
    <label>L1 Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORGANIZED TRADE</fullName>
                <default>true</default>
                <label>ORGANIZED TRADE</label>
            </value>
            <value>
                <fullName>TRADITIONAL TRADE</fullName>
            </value>
            <value>
                <fullName>AWAY FROM HOME</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTOR</fullName>
            </value>
            <value>
                <fullName>E-COMMERCE</fullName>
            </value>
            <value>
                <fullName>LARGE FORMAT</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>SMALL FORMAT</fullName>
            </value>
            <value>
                <fullName>WHOLESALE</fullName>
            </value>
            <value>
                <fullName>TRADITIONAL SALE</fullName>
            </value>
            <value>
                <fullName>PRE-SELLER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>