bundled_metadata/force-app/main/default/objects/Task_Scheduler_Rule__mdt/fields/L2_Subchannel__c.field-meta.xml
<CustomField>
    <fullName>L2_Subchannel__c</fullName>
    <label>L2 Subchannel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMPLOYEE SALES</fullName>
                <default>true</default>
                <label>EMPLOYEE SALES</label>
            </value>
            <value>
                <fullName>EXPORT</fullName>
            </value>
            <value>
                <fullName>CASH&amp;CARRY</fullName>
            </value>
            <value>
                <fullName>COBO</fullName>
            </value>
            <value>
                <fullName>COMAN</fullName>
            </value>
            <value>
                <fullName>CONCIERGE</fullName>
            </value>
            <value>
                <fullName>CONV&amp;GAS</fullName>
            </value>
            <value>
                <fullName>CONV&amp;GAS DIST</fullName>
            </value>
            <value>
                <fullName>DELI</fullName>
            </value>
            <value>
                <fullName>DEPT STORE</fullName>
            </value>
            <value>
                <fullName>DRUG&amp;PHARMACY</fullName>
            </value>
            <value>
                <fullName>DTC</fullName>
            </value>
            <value>
                <fullName>FOBO</fullName>
            </value>
            <value>
                <fullName>FOOD SERVICE DIST</fullName>
            </value>
            <value>
                <fullName>FREEZER STORE</fullName>
            </value>
            <value>
                <fullName>GROCERY</fullName>
            </value>
            <value>
                <fullName>GROCERY DIST</fullName>
            </value>
            <value>
                <fullName>HYPER SUPER CENTER</fullName>
            </value>
            <value>
                <fullName>IBS</fullName>
            </value>
            <value>
                <fullName>INTERCO</fullName>
            </value>
            <value>
                <fullName>LARGE DISCOUNTER</fullName>
            </value>
            <value>
                <fullName>MILITARY&amp;GOVT</fullName>
            </value>
            <value>
                <fullName>MISC SALES</fullName>
            </value>
            <value>
                <fullName>MULTIFORMAT</fullName>
            </value>
            <value>
                <fullName>MULTIFORMAT DIST</fullName>
            </value>
            <value>
                <fullName>NATURAL DIST</fullName>
            </value>
            <value>
                <fullName>OMNI</fullName>
            </value>
            <value>
                <fullName>PURE PLAY</fullName>
            </value>
            <value>
                <fullName>RECREATION&amp;RETAIL</fullName>
            </value>
            <value>
                <fullName>RESTAURANT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>