bundled_metadata/force-app/main/default/objects/Task_Scheduler_Rule__mdt/fields/L3_Snacks_Val_Segment__c.field-meta.xml
<CustomField>
    <fullName>L3_Snacks_Val_Segment__c</fullName>
    <label>L3 Snacks Val Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>B+</fullName>
            </value>
            <value>
                <fullName>C+</fullName>
            </value>
            <value>
                <fullName>D+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>