bundled_metadata/force-app/main/default/objects/Task_Scheduler_Rule__mdt/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
                <default>true</default>
                <label>UK</label>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>RO</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>