bundled_metadata/force-app/main/default/objects/Task_Scheduler_Rule__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PS-related Surveys</fullName>
                <default>true</default>
                <label>PS-related Surveys</label>
            </value>
            <value>
                <fullName>Local Survey</fullName>
            </value>
            <value>
                <fullName>Main Space Audit (Beverages)</fullName>
            </value>
            <value>
                <fullName>Main Space Audit (Snacks)</fullName>
            </value>
            <value>
                <fullName>Secondary Space Audit (POSM)</fullName>
            </value>
            <value>
                <fullName>SKU Audit</fullName>
            </value>
            <value>
                <fullName>Main Space Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>